# rust-soundex

./: Cargo.toml  README.md
src/: lib.rs
